tests/urmoac/errors/net_issues/edge_vmax_0/o2r_output.urmoac
1000;10000;0.00;20.00;-250.00;0.00;-250.00;-20.00
1003;10000;250.00;10.00;0.00;0.00;0.00;-10.00
1001;10001;400.00;10.00;-150.00;0.00;-150.00;10.00
1002;10001;300.00;0.00;-50.00;0.00;-50.00;0.00
1004;10001;200.00;20.00;50.00;0.00;50.00;20.00
1005;10001;100.00;0.00;150.00;0.00;150.00;0.00
1006;10001;0.00;10.00;250.00;0.00;250.00;10.00
